feat(security): implement JWT authentication service
- Add `JwtService` for token generation, validation, and claim extraction.
- Configure `build.gradle` with required jjwt dependencies for JWT functionality.